--- a/pom.xml
+++ b/pom.xml
@@ -67,13 +67,6 @@
 			<version>10.0-rc3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.swt.gtk.linux</groupId>
-			<artifactId>x86</artifactId>
-			<version>3.3.0-v3346</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 			<version>0.9.28</version>
@@ -94,7 +87,22 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>swt</artifactId>
+			<version>3.7.0.v3735b</version>
+			<scope>system</scope>
+			<systemPath>C:\Programs\eclipse\plugins\org.eclipse.swt_3.7.0.v3735b.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>swt-win32</artifactId>
+			<version>3.7.0.v3735b</version>
+			<scope>system</scope>
+			<systemPath>C:\Programs\eclipse\plugins\org.eclipse.swt.win32.win32.x86_3.7.0.v3735b.jar</systemPath>
+		</dependency>
 	</dependencies>
+	
   <repositories>
     <repository>
       <releases>
